	pass the data into the backend.

2003-01-04  Derek Atkkins  <derek@ihtfp.com>

	* add a set of business accounts to the setup druid
	* fix the full and common accounts to remove the (wrong) "Accounts Payable"
	  liability account.

	* src/engine/Transaction.[ch]: add TRANS_NOTES and supporting routines
	  to enable searching for notes.
	
2003-01-03  David Hampton  <hampton@employees.org>

	* src/gnome/druid-hierarchy.c:
	* src/gnome/druid-loan.c:
	* src/gnome/druid-stock-split.c:
	* src/gnome/window-reconcile.c:
	* src/gnome-utils/window-help.c:
	* src/import-export/qif-import/druid-qif-import.c: Add icons to
	gtk only windows. This can probably be reverted in the port to
	gnome2 when the icon functionality moves from gnome_xxx to
	gtk_xxx.

	* src/engine/gnc-pricedb.h:
	* src/gnome/dialog-price-edit-db.c: Add support for i18n of price
	source strings. Needs to be done at display time because the
	strings are embedded into the data file. #102156

	* src/import-export/qif-import/druid-qif-import.c:
	* src/import-export/qif-import/qif.glade: Add a smart function for
	going "back" from the "load a file" page.  If there are any files
	loaded it returns to the "loaded files" page instead of the
	initial druid page. #101818

	* src/backend/file/gnc-backend-file.c
	(gnc_file_be_load_from_file): Don't free the lockfile name any
	time there is an error.  Wait for the session to be destroyed so
	the lockfile will be cleaned up properly. #101004

	* src/app-file/gnc-file.c (gnc_file_query_save): Grab the current
	session each time around the while loop so as not to have a
	dangling pointer. #101004

2003-01-03  Derek Atkins  <derek@ihtfp.com>

	* src/business/business-gnome/glade/invoice.glade: fix a string
	  to make the meaning more clear (per user request)

2003-01-03  Matthew Vanecek <mevanecek@yahoo.com>
	* src/backend/postgres/Postgresbackend.c: Fixed some compiler
	warning messages about MODE_NONE and a some GUIDs used as
	string pointers in informational messages.
